--- a/tct/static/amusa_main_2016032801.css
+++ b/tct/static/amusa_main_2016032801.css
@@ -937,7 +937,9 @@ h2.headline_pretty {
 	line-height: 1.5em;
 	font-size: 1.05em;
 	height: 72%;
-	overflow-y: scroll
+    overflow-y: scroll;
+    overflow-x: clip;
+    width: 98%;
 }
 
 #question_form label:hover {
