--- a/tct/static/amusa_main_2016032801.css
+++ b/tct/static/amusa_main_2016032801.css
@@ -922,14 +922,13 @@ h2.headline_pretty {
 	margin: 0 1em .5em;
 	border: double;
 	border-color: #c9c9c9;
-	background-color: #E8FBFF
+	background-color: #E8FBFF;
 }
 
 .inner_inner_window {
 	background: none;
 	margin: 0;
 	height: 85%;
-	z-index: 1;
 }
 
 #question_form {
@@ -938,8 +937,7 @@ h2.headline_pretty {
 	line-height: 1.5em;
 	font-size: 1.05em;
 	height: 72%;
-    overflow-y: scroll;
-    overflow-x: clip;
+    overflow-y: auto;
     width: 98%;
 }
 
